# xcluo.github.io

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml  tags.json  todo.html
.github/workflows/: jekyll-gh-pages.yml  push_pages.yml
AI/: annotation.html
AI/AI_Lab/: AI_Lab.html
AI/AI_Platform/: ai_platform.html  index.html
AI/Metrics/: correlation_metrics.html  evaluation_metrics.html  features.html  index.html  smoothing_metrics.html
AI/Train_Overview/: index.html
AI/annotation/: index.html
Examination/Software_Examination/: software_examination.html
MISC/Car/: index.html
MISC/Chess_Cards/: Cards.html  Chess.html  Mahjong.html  PaiGow.html
MISC/Clothes/: index.html
MISC/Shoe/: index.html
MISC/Wine/: index.html
Math/: annotation.html
Math/Calculus/: index.html
Math/Distribution/: index.html  sampling.html
Math/Linear_Algebra/: index.html
Math/annotation/: index.html
Programing/: annotation.html
Programing/Algorithm/: index.html
Programing/Database/: database.html  elasticsearch.html  faiss.html  milvus.html  minio.html  mysql.html  postgresql.html  redis.html  sqlite.html
Programing/Git/: git.html  git_config.html  index.html
Programing/Java/: index.html  java.html
Programing/MATLAB/: index.html
Programing/Python/: index.html  python.html
Programing/SQL/: index.html
Programing/wheel/: index.html
Resource/Media/: index.html
Resource/Tool/: index.html
System/Linux/: index.html  (+1 more)
blog/: index.html
docs/: .dates_cache.jsonl  index.md  todo.md
search/: search_index.json
(+1033 files in other folders)
